--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@astrojs/check": "^0.7.0",
     "@astrojs/rss": "^4.0.6",
+    "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
   }
 }
