--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.7.0",
     "@astrojs/rss": "^4.0.6",
     "@astrojs/tailwind": "^5.1.0",
+    "@fontsource/poppins": "^5.0.14",
+    "@fontsource/twinkle-star": "^5.0.20",
     "astro": "^4.10.1",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.4.5"
